unix/lang/tests/error/break_error2.yab
#expect#---Error in break_error2.yab, line 8:
#expect#---Error: invalid number of levels to break: 4; only 1,2 or 3 are allowed
#expect#     if (a=2) break 4
#expect#                    ^
#expect#---Error: Couldn't parse program
#expect#---Error: Program not executed
for a=0 to 4
  if (a=2) break 4
next a
